--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,8 @@ dependencies:
   google_fonts: ^2.1.0
   fluttertoast: ^8.0.8
   form_field_validator: ^1.1.0
-  flutter_bloc: ^8.0.1
-  equatable: ^2.0.0
   intl: ^0.17.0
+  get: ^4.6.5
 
   firebase_auth: ^3.3.18
   cloud_firestore: ^3.1.16
@@ -79,9 +78,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/images/leagues/
+    - assets/
+    - assets/images/avatar/
+    - assets/images/landing_images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
