--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,18 @@ dependencies:
   firebase_core: ^1.17.0
   firebase_storage: ^10.2.16
   firebase_messaging: ^13.0.0
+  paginate_firestore: ^1.0.3+1
+  shared_preferences: ^2.0.9
 
   image_picker: ^0.8.5+3
   permission_handler: ^8.0.1
   cached_network_image:
+
+  flutter_sound_lite: ^8.5.0
+  audioplayers: ^0.20.1
+  chewie: ^1.3.4
+  video_player: ^2.4.6
+  just_waveform: ^0.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
