--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   video_player: ^2.4.6
   just_waveform: ^0.0.3
 
+  signalr_netcore: ^1.3.3
+  logging: ^1.0.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -88,6 +91,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/white_kit/
     - assets/images/leagues/
     - assets/
     - assets/images/avatar/
