--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,10 +60,15 @@ dependencies:
   signalr_netcore: ^1.3.3
   logging: ^1.0.2
 
+  http: ^0.13.5
+  local_auth: 
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_stripe: ^2.0.1
+  google_mobile_ads: ^2.0.1
   
 
 dev_dependencies:
