--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.top_bantz_2">
+
+    <!-- <users-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <users-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> -->
    <application
         android:label="top_bantz_2"
         android:name="${applicationName}"
