--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_stripe: ^2.0.1
   google_mobile_ads: ^2.0.1
+
+  screenshot: ^1.2.3
+  image_gallery_saver: ^1.7.1
+  path_provider: ^2.0.11
   
 
 dev_dependencies:
