--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.top_bantz_2">
 
-    <!-- <users-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <users-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
    <application
         android:label="top_bantz_2"
         android:name="${applicationName}"
+        android:requestLegacyExternalStorage='true'
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
