--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,11 @@ dependencies:
 
   signalr_netcore: ^1.3.3
   logging: ^1.0.2
+  flutter_email_sender: ^5.1.0
 
   http: ^0.13.5
   local_auth: 
+  flutter_expanded_tile: ^0.3.6
 
 
   # The following adds the Cupertino Icons font to your application.
